<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NextActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="420dp"
        android:layout_height="105dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:background="@color/white"
        android:fontFamily="@font/archivo_black"
        android:text="@string/title"
        android:textColor="#ED100101"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idNome"
        android:layout_width="2dp"
        android:layout_height="24dp"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="79dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="353dp"
        android:layout_height="55dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="32dp"
        android:background="#2196F3"
        android:text="@string/exercise1"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.288" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="375dp"
        android:layout_height="153dp"
        android:background="#2196F3"
        android:text="@string/exercise2"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>